--- a/AzureDevOps.Client/ClientApp/src/app/fetch-data/fetch-data.component.html
+++ b/AzureDevOps.Client/ClientApp/src/app/fetch-data/fetch-data.component.html
@@ -1,4 +1,4 @@
-<h1 id="tableLabel">Weather forecast</h1>
+<h1 id="tableLabel">Lista Productos Nuevos</h1>
 
 <p>This component demonstrates fetching Products from the server.</p>
 
